spacing fixes

--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -140,7 +140,7 @@
       }
     }
     .photos {
-      margin: 40px 16px 20px;
+      margin: 40px 13px 20px;
       li {
         float: left;
         margin: 0 0 0 37px;
@@ -183,7 +183,7 @@
       }
     }
     .choices {
-      margin: 40px 16px 20px;
+      margin: 40px 7px 20px;
       overflow: hidden;
       li {
         margin: 0 0 20px;
